[gd_scene load_steps=10 format=3 uid="uid://dwakv3g8yoorg"]

[ext_resource type="PackedScene" uid="uid://win6qvnp3tln" path="res://scenes/entities/base-classes/enemy.tscn" id="1_aw4ba"]
[ext_resource type="Script" path="res://scenes/entities/enemies/medium_enemy.gd" id="2_7gc1s"]
[ext_resource type="Texture2D" uid="uid://dqmouwab5v2cx" path="res://assets/enemies/enemy_medium.png" id="3_6d602"]
[ext_resource type="PackedScene" uid="uid://bxjgg8h1ty86w" path="res://scenes/entities/enemies/bullet.tscn" id="3_7wmaj"]
[ext_resource type="PackedScene" uid="uid://3l4h0vcm1enb" path="res://scenes/entities/enemies/laser.tscn" id="5_dxrtq"]

[sub_resource type="AtlasTexture" id="AtlasTexture_h3w0f"]
atlas = ExtResource("3_6d602")
region = Rect2(0, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ykcdi"]
atlas = ExtResource("3_6d602")
region = Rect2(0, 32, 16, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_damjy"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_h3w0f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ykcdi")
}],
"loop": true,
"name": &"default",
"speed": 3.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_a1sth"]
radius = 15.0
height = 64.0

[node name="MediumEnemy" instance=ExtResource("1_aw4ba")]
script = ExtResource("2_7gc1s")
Bullet = ExtResource("3_7wmaj")
fire_rate = 3.0
health = 100
points = 1000

[node name="AnimatedSprite2D" parent="." index="0"]
sprite_frames = SubResource("SpriteFrames_damjy")

[node name="DeathAnimation" parent="." index="1"]
scale = Vector2(3, 3)

[node name="CollisionShape2D" parent="." index="2"]
shape = SubResource("CapsuleShape2D_a1sth")

[node name="VisibleOnScreenNotifier2D" parent="." index="3"]
position = Vector2(0, 1.90735e-06)
scale = Vector2(1.5, 3.2)

[node name="Laser" parent="." index="5" instance=ExtResource("5_dxrtq")]

[node name="LaserCooldown" type="Timer" parent="Laser" index="3"]
wait_time = 3.0
one_shot = true

[connection signal="ended" from="Laser" to="." method="_on_laser_ended"]
[connection signal="timeout" from="Laser/LaserCooldown" to="." method="_on_laser_cooldown_timeout"]
